Fix sketch links

--- a/sketch/dns-101/index.html
+++ b/sketch/dns-101/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body id="page-top">
-    <a href="/blog">
+    <a href="/sketch">
       <h4 class="mb-5"> <span class="fa fa-chevron-left"></span> back</h4>
     </a>
 
@@ -147,11 +147,11 @@ globo.com name server ns03.globo.com.
 
     </article>
 
-    
+
     <footer>
   <div id="footer">
     <div class="container">
-      
+
     </div>
   </div>
 </footer>
